learn-kustomize/base/ingress-rules.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /   #new 
  name: kustomize-example-app
  namespace: kustomize-example
spec:
  tls:
  - hosts:
    - localhost
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: kustomize-example-svc
          servicePort: 80
